Patcher mer